--- a/app/src/main/res/layout/activity_all_authors.xml
+++ b/app/src/main/res/layout/activity_all_authors.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
@@ -24,11 +25,52 @@
         android:layout_above="@+id/bottom_navigation"
         android:layout_marginTop="10dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvAllAuthors"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <EditText
+                android:layout_below="@+id/bottombar"
+                android:id="@+id/etSearch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="أدخل إسم الكاتب"
+                android:drawableRight="@drawable/ic_search_black_24dp"
+                android:drawablePadding="10dp"
+                android:focusable="true"
+                android:layout_margin="15dp"
+                android:padding="10dp"
+                android:paddingStart="20dp"
+                android:maxLines="1"
+                android:background="@drawable/border"
+                android:imeOptions="actionSearch"
+                android:inputType="text"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvAllAuthors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:id="@+id/tvNotFound"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textAlignment="center"
+                    android:padding="4dp"
+                    android:text="الكاتب غير موجود"
+                    android:gravity="center"
+                    android:textColor="@color/green"
+                    android:visibility="gone"
+
+                    android:layout_marginBottom="20dp"/>
+            </RelativeLayout>
+
+        </LinearLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
