--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -271,7 +271,7 @@
                     android:onClick="GoToMain"
                     android:text="المتابعة بدون تسجيل حساب"
                     android:textAllCaps="false"
-                    android:textColor="@color/green1"
+                    android:textColor="@color/green"
                     android:textSize="12sp"
                     />
             </LinearLayout>
