--- a/app/src/main/res/layout/activity_single_book.xml
+++ b/app/src/main/res/layout/activity_single_book.xml
@@ -43,11 +43,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp">
-
-                        <ImageView
-                            android:id="@+id/imgImageBook"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="400dp" />
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:id="@+id/imgImageBook"
+                                android:layout_width="match_parent"
+                                android:layout_height="400dp" />
+                            <TextView
+                                android:id="@+id/tvISBN"
+                                android:layout_width="150px"
+                                android:layout_height="60px"
+                                android:background="@color/green"
+                                android:textColor="@color/gray1"
+                                android:textAlignment="center"
+                                android:textStyle="bold"
+                                android:textSize="20sp"/>
+                        </RelativeLayout>
+
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
@@ -218,7 +231,7 @@
                                 android:layout_gravity="center"
                                 android:isIndicator="true"
                                 android:numStars="5"
-                                android:outlineAmbientShadowColor="@color/green"
+                                android:outlineAmbientShadowColor="@color/blue1"
                                 android:outlineSpotShadowColor="@color/white"
                                 android:stepSize="0.1" />
 
