- Search by author name - change the color - change the logo

--- a/app/src/main/res/layout/activity_single_book.xml
+++ b/app/src/main/res/layout/activity_single_book.xml
@@ -223,7 +223,20 @@
 
 
 <!--                            </RelativeLayout>-->
+                            <TextView
+                                android:id="@+id/tvNote"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="80dp"
+                                android:onClick="GoToCategory"
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:layout_gravity="right"
+                                android:gravity="right"
+                                android:visibility="gone"
+                                android:textColor="@color/green"
 
+                                />
                             <RatingBar
                                 android:id="@+id/rating"
                                 android:layout_width="wrap_content"
