--- a/app/src/main/res/layout/activity_single_book.xml
+++ b/app/src/main/res/layout/activity_single_book.xml
@@ -235,6 +235,7 @@
                                 android:gravity="right"
                                 android:visibility="gone"
                                 android:textColor="@color/green"
+                                android:layout_marginBottom="10dp"
 
                                 />
                             <RatingBar
