- the last edit

--- a/app/src/main/res/layout/activity_error_qr_reader.xml
+++ b/app/src/main/res/layout/activity_error_qr_reader.xml
@@ -46,6 +46,8 @@
         android:background="@drawable/border"
         android:padding="10dp"
         android:hint="Example : A12"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
         />
     <Button
         android:id="@+id/btnEnter"
