--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -20,22 +20,13 @@
             android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/tvWelcome"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/green"
-                android:textAlignment="center"
-                android:textSize="35sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/vibesregular"
-                android:text="أصيل"
-                />
+
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/logo"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"/>
             <TextView
                 android:id="@+id/tvWelcome1"
                 android:layout_width="fill_parent"
