--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,19 +13,20 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:paddingBottom="40dp"
             android:src="@drawable/logo" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="مكتبة أصيل"
+        android:text="صَفْحَاتٌ مِنْ وَرَقٍ"
         android:textSize="30sp"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="@color/green"/>
+        android:textColor="@color/green"
+        android:fontFamily="@font/vibesregular"/>
 
     </LinearLayout>
 
