--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,15 @@
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:text="صَفْحَاتٌ مِنْ وَرَقٍ"
+                   android:textSize="30sp"
+                   android:textAlignment="center"
+                   android:textStyle="bold"
+                   android:textColor="@color/green"
+                   android:fontFamily="@font/vibesregular"/>
                <LinearLayout
                    android:id="@+id/llUserName"
                    android:layout_width="match_parent"
