--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,31 +21,12 @@
 
 
 
+
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/logo"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="صَفْحَاتٌ مِنْ وَرَقٍ"
-                android:textSize="30sp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/green"
-                android:fontFamily="@font/vibesregular"/>
-            <TextView
-                android:id="@+id/tvWelcome1"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:textColor="#fff"
-                android:textSize="14sp"
-                android:layout_marginStart="18dp"
-                android:layout_marginEnd="18dp"
-                android:text="إسم المستخدم يجب أن يكون باللغة الانجليزية "  />
+                android:layout_gravity="center"/>
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -99,17 +80,17 @@
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etUserName"
+                        android:id="@+id/etEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/input_register_bg"
-                        android:hint="إسم المستخدم "
+                        android:hint="إيميل "
 
                         android:textColor="@color/input_register"
                         android:inputType="text"
                         android:padding="10dp"
                         android:textColorHint="@color/input_register_hint"
-                        android:drawableStart="@drawable/person"
+                        android:drawableStart="@drawable/email"
                         android:drawablePadding="10dp"
 
                         />
@@ -238,6 +219,17 @@
                     android:textColor="#fff"
                     android:onClick="SignUp"
                     />
+                <TextView
+                    android:id="@+id/tvConditions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="بالضعظ على زر التسجيل أنت توافق على شروط الإستخدام"
+                    android:textSize="14sp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center"
+                        android:onClick="GoToConditionsPage"/>
+
 
                 <!-- Link to Login Screen -->
 
@@ -271,7 +263,7 @@
                     android:onClick="GoToMain"
                     android:text="المتابعة بدون تسجيل حساب"
                     android:textAllCaps="false"
-                    android:textColor="@color/green"
+                    android:textColor="@color/green1"
                     android:textSize="12sp"
                     />
             </LinearLayout>
