--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/imgSplash"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:paddingBottom="40dp"
