--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,8 +36,8 @@
 
 
 
-    <color name="maincolor">#feee00</color>
-    <color name="maincolor1">#F0E77B</color>
+    <color name="maincolor">#FFCD22</color>
+    <color name="maincolor1">#050505</color>
     <color name="maincolor3">#79CFC537</color>
     <color name="maincolor2">#CECBAC</color>
 
