--- a/app/src/main/res/layout/activity_conditions.xml
+++ b/app/src/main/res/layout/activity_conditions.xml
@@ -8,6 +8,11 @@
 	android:layout_gravity="center"
 	android:orientation="vertical">
 
+	<ProgressBar
+		android:id="@+id/progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true" />
 	<ScrollView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
@@ -27,11 +32,11 @@
 				android:id="@+id/tvcondition"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:text=" "
-				android:textSize="18sp"
+				android:textSize="15sp"
 				android:layout_marginTop="20dp"
-				android:padding="10dp"
-				android:textStyle="bold"/>
+				android:textStyle="bold"
+				android:lineSpacingExtra='5dp'
+				android:padding="2dp"/>
 		</LinearLayout>
 
 	</ScrollView>
