--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,16 +61,16 @@
 
                        <com.google.android.material.textfield.TextInputEditText
 
-                           android:id="@+id/etUserName"
+                           android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
-                           android:hint="إسم المستخدم"
+                           android:hint="الإيميل"
                            android:textColor="@color/btn_login_bg"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColorHint="@color/btn_login_bg"
                            android:background="@color/input_register_bg"
-                           android:drawableStart="@drawable/person"
+                           android:drawableStart="@drawable/email"
                            android:drawablePadding="10dp"
                            />
 
@@ -149,7 +149,18 @@
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="12sp"
+                   android:visibility="gone"
                    />
+               <TextView
+                   android:id="@+id/tvActivationMessage"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:textSize="18sp"
+                   android:textAlignment="center"
+                   android:textStyle="bold"
+                   android:textColor="@color/red"
+                  />
+
            </LinearLayout>
        </RelativeLayout>
 
@@ -157,7 +168,7 @@
 </ScrollView>
 
     <ProgressBar
-        android:id="@+id/progressbar"
+        android:id="@+id/progressbar11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
