--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -192,6 +192,8 @@
                     app:counterTextAppearance="@style/CounterText"
                     app:hintTextAppearance="@style/HintText"
                     android:theme="@style/EditTextHint"
+                    android:visibility="gone"
+
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -209,6 +211,17 @@
                         />
 
                 </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:id="@+id/tvConditions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="بالضعظ على زر التسجيل أنت توافق على شروط الإستخدام"
+                    android:textSize="14sp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center"
+                    android:onClick="GoToConditionsPage"/>
+
                 <Button
                     android:id="@+id/btnRegister"
                     android:layout_width="fill_parent"
@@ -219,16 +232,6 @@
                     android:textColor="#fff"
                     android:onClick="SignUp"
                     />
-                <TextView
-                    android:id="@+id/tvConditions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="بالضعظ على زر التسجيل أنت توافق على شروط الإستخدام"
-                    android:textSize="14sp"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="20dp"
-                    android:layout_gravity="center"
-                        android:onClick="GoToConditionsPage"/>
 
 
                 <!-- Link to Login Screen -->
@@ -263,8 +266,9 @@
                     android:onClick="GoToMain"
                     android:text="المتابعة بدون تسجيل حساب"
                     android:textAllCaps="false"
-                    android:textColor="@color/green1"
+                    android:textColor="@color/green"
                     android:textSize="12sp"
+                    android:visibility="gone"
                     />
             </LinearLayout>
         </LinearLayout>
