--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -90,7 +90,8 @@
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="5dp">
+                                android:layout_marginBottom="5dp"
+                                android:visibility="gone">
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -118,7 +119,8 @@
                                 android:padding="5dp"
                                 android:textAlignment="center"
                                 android:textColor="@color/gray"
-                                android:textSize="14sp" />
+                                android:textSize="14sp"
+                                android:visibility="gone"/>
 
                         </LinearLayout>
 
