--- a/app/src/main/res/layout/userqoutes_layout.xml
+++ b/app/src/main/res/layout/userqoutes_layout.xml
@@ -67,7 +67,8 @@
                     android:layout_gravity="right"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/gray"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+	                android:visibility="gone"/>
             </LinearLayout>
 			<TextView
 				android:id="@+id/tvquote"
