--- a/app/src/main/res/layout/userreviews_layout.xml
+++ b/app/src/main/res/layout/userreviews_layout.xml
@@ -38,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textSize="12sp"
-                android:textColor="@color/gray" />
+                android:textColor="@color/gray"
+                android:visibility="gone"/>
         </LinearLayout>
 
 
