--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,20 @@
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>
 
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center"
+                   android:layout_marginBottom="8dp"
+                   android:onClick="GoAllCategory"
+                   android:text="تسجيل دخول"
+                   android:textColor="@color/green"
+                   android:textSize="20sp"
+                   android:textStyle="bold"
+                   android:typeface="serif" />
+
+
                <LinearLayout
                    android:id="@+id/llUserName"
                    android:layout_width="match_parent"
