--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,6 +28,17 @@
                 android:layout_height="150dp"
                 android:src="@drawable/logo"
                 android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:onClick="GoAllCategory"
+                android:text="إنشاء جساب"
+                android:textColor="@color/green"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
